@@ -488,6 +488,9 @@ Release 0.20.0 - Unreleased
 
     HADOOP-4924. Fixes a race condition in TaskTracker re-init. (ddas)
 
+    HADOOP-4854. Read reclaim capacity interval from capacity scheduler 
+    configuration. (Sreekanth Ramakrishnan via yhemanth)
+
 Release 0.19.1 - Unreleased
 
   IMPROVEMENTS
